<resources>
    <string name="app_name">Video Conferencing Tool</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_login">User Login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?<font color="#3366CC"> Sign Up</font></string>
    <string name="have_an_account_sign_in">Already have an account?<font color="#3366CC"> Sign In</font></string>
    <string name="sign_up">Sign UP</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading…</string>
    <string name="select_contact">Select Contact</string>
    <string name="message">Message</string>
    <string name="menu">menu</string>
    <string name="back">Back</string>
    <string name="video_call">video Call</string>
    <string name="audio_call">Audio Call</string>
    <string name="send_message">Send message</string>
    <string name="attachment">Attachment</string>
    <string name="camera">Camera</string>
    <string name="start_chatting">Start Chatting</string>
    <string name="message_privately_with_your_28_whatsapp_contact">Message Privately with your 28 Whatsapp Contact</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="leave_call">Leave Call</string>
    <string name="calling">Calling</string>
    <string name="change_speaker">Change Speaker</string>
</resources>