<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212529"
    tools:context=".fragments.CallFragment">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/on_primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/calling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calling"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/on_primary"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <!--        <TextView-->
        <!--            android:id="@+id/infoText"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignParentTop="true"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:text="Press the button to join a channel" />-->

        <ImageView
            android:id="@+id/leaveButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:src="@drawable/leave_call"
            android:contentDescription="@string/leave_call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/toggle_audio_device"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_speaker"
            android:contentDescription="@string/change_speaker"
            app:layout_constraintBottom_toBottomOf="@+id/leaveButton"
            app:layout_constraintStart_toEndOf="@+id/leaveButton"
            app:layout_constraintTop_toTopOf="@+id/leaveButton" />


</androidx.constraintlayout.widget.ConstraintLayout>